<resources>
    <string name="app_name">Project2</string>
    <string name="admin">ADMIN</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="title">SKATE GOTCHA</string>
    <string name="createAccount">CREATE AN ACCOUNT</string>

    <string name="preference_file_key">UserPref</string>
    <string name="preference_userid_key">preference_userid_key</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="tab_users">USERS</string>
    <string name="tab_items">ITEMS</string>
    <string name="buy">BUY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sell">SELL</string>
    <string name="deckname">Deck\'s name</string>
    <string name="size">Size (ex: 8.0)</string>
    <string name="price">Price (ex: 45)</string>
    <string name="add">ADD</string>
    <string name="modify">MODIFY</string>
    <string name="order_history">Order History</string>
</resources>