<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="160dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/mainLoginButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="300dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

        <Button
            android:id="@+id/mainCreateAccountButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/createAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainLoginButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>